VMware Horizon Client for 32-bit (v3.2.1) Windows installation failed
r74984
https://download3.vmware.com/software/view/viewclients/CART14Q4/VMware-Horizon-View-Client-x86-3.2.1-2787444.exe
This bug is very important as my University (eng.ncfu.ru) wants to use ReactOS as thin client
fixme:(dll/win32/shell32/shlexec.cpp:1782) flags ignored: 0x00000004
|
(sdk/lib/rtl/actctx.c:2355) unknown attr xmlns:asmv3=urn:schemas-microsoft-com:asm.v3
|
(sdk/lib/rtl/actctx.c:2447) unknown element compatibility
|
err:(dll/win32/advapi32/wine/security.c:1331) NtQuerySecurityObject() failed (Status c0000023)
|
err:(dll/win32/advapi32/wine/security.c:1331) NtQuerySecurityObject() failed (Status c0000023)
|
err:(dll/win32/advapi32/wine/security.c:1331) NtQuerySecurityObject() failed (Status c0000023)
|
err:(dll/win32/advapi32/wine/security.c:1331) NtQuerySecurityObject() failed (Status c0000023)
|
err:(dll/win32/advapi32/wine/security.c:1331) NtQuerySecurityObject() failed (Status c0000023)
|
(sdk/lib/rtl/image.c:192) Invalid image DOS signature!
|
(sdk/lib/rtl/image.c:192) Invalid image DOS signature!
|
(dll/win32/kernel32/client/loader.c:384) LoadLibraryExW(C:\DOCUME~1\ADMINI~1\LOCALS~1\Temp\{7051C96D-AA61-4D83-AF37-646E82D616ED}~setup\\VMware-Horizon-View-Client-x86-3.2.1-2787444.msi) failing with status c000007b
|
(sdk/lib/rtl/image.c:192) Invalid image DOS signature!
|
(sdk/lib/rtl/image.c:192) Invalid image DOS signature!
|
(dll/win32/kernel32/client/loader.c:384) LoadLibraryExW(C:\DOCUME~1\ADMINI~1\LOCALS~1\Temp\{7051C96D-AA61-4D83-AF37-646E82D616ED}~setup\VMware-Horizon-View-Client-x86-3.2.1-2787444.msi) failing with status c000007b
|
(dll/win32/kernel32/client/loader.c:384) LoadLibraryExW(C:\ReactOS\Microsoft.NET\Framework\v4.0.30319\fusion.dll) failing with status c0000135
|
(win32ss/user/ntuser/message.c:1256) err: UserPostMessage: Invalid handle 0xBC65051C Msg 0x2a3!
|
fixme:(dll/win32/msi/dialog.c:4397) doing nothing
|
(win32ss/user/ntuser/message.c:1256) err: UserPostMessage: Invalid handle 0xBC65051C Msg 0x2a3!
|
(dll/ntdll/ldr/ldrutils.c:1311) LDR: LdrpMapDll Relocating Image Name C:\DOCUME~1\ADMINI~1\LOCALS~1\Temp\msiA.tmp (10000000-1016F000 -> 00E30000)
|
(dll/ntdll/ldr/ldrutils.c:1350) Overlapping DLL: C:\DOCUME~1\ADMINI~1\LOCALS~1\Temp\msi9.tmp
|
(win32ss/user/ntuser/message.c:1256) err: UserPostMessage: Invalid handle 0xBC657450 Msg 0x2a3!
|
(win32ss/user/ntuser/msgqueue.c:1541) err: Not the same cursor!
|
(win32ss/user/ntuser/msgqueue.c:1541) err: Not the same cursor!
|
(win32ss/user/ntuser/message.c:1256) err: UserPostMessage: Invalid handle 0xBC65040C Msg 0x2a3!
|
(win32ss/user/ntuser/msgqueue.c:1541) err: Not the same cursor!
|
(win32ss/user/ntuser/msgqueue.c:1541) err: Not the same cursor!
|
(win32ss/user/ntuser/message.c:1256) err: UserPostMessage: Invalid handle 0xBC65040C Msg 0x2a3!
|
(win32ss/user/ntuser/msgqueue.c:1541) err: Not the same cursor!
|
(win32ss/user/ntuser/msgqueue.c:1541) err: Not the same cursor!
|
(win32ss/user/ntuser/message.c:1256) err: UserPostMessage: Invalid handle 0xBC65040C Msg 0x2a3!
|
(win32ss/user/ntuser/msgqueue.c:1541) err: Not the same cursor!
|
(win32ss/user/ntuser/msgqueue.c:1541) err: Not the same cursor!
|
(win32ss/user/ntuser/message.c:1256) err: UserPostMessage: Invalid handle 0xBC65040C Msg 0x2a3!
|
(dll/ntdll/ldr/ldrutils.c:1311) LDR: LdrpMapDll Relocating Image Name C:\DOCUME~1\ADMINI~1\LOCALS~1\Temp\msiB.tmp (10000000-10074000 -> 01040000)
|
(dll/ntdll/ldr/ldrutils.c:1350) Overlapping DLL: C:\DOCUME~1\ADMINI~1\LOCALS~1\Temp\msi9.tmp
|
err:(dll/win32/msi/action.c:503) Execution halted, action L"InstallServices" returned 1603
|
err:(dll/win32/msi/action.c:503) Execution halted, action L"ExecuteAction" returned 1603
|
(win32ss/user/ntuser/message.c:1256) err: UserPostMessage: Invalid handle 0xBC65040C Msg 0x2a3!
|
(dll/win32/kernel32/client/loader.c:384) LoadLibraryExW(C:\Program Files\Common Files\VMware\DeviceRedirectionCommon\ftnlapi.dll) failing with status c000000f
|
(dll/win32/kernel32/client/loader.c:384) LoadLibraryExW(C:\Program Files\Common Files\VMware\DeviceRedirectionCommon\ftnlsv.exe) failing with status c000000f
|
(dll/win32/kernel32/client/loader.c:384) LoadLibraryExW(C:\Program Files\Common Files\VMware\DeviceRedirectionCommon\ftnliu.exe) failing with status c000000f
|
(dll/win32/kernel32/client/loader.c:384) LoadLibraryExW(C:\Program Files\Common Files\VMware\DeviceRedirectionCommon\ftnlrdp.dll) failing with status c000000f
|
(dll/win32/kernel32/client/loader.c:384) LoadLibraryExW(C:\Program Files\VMware\VMware Horizon View Client\tsmmrPlayer.dll) failing with status c000000f
|