[SERVICES] Allow CreateService to create an interactive service under the LocalSystem account. MSDN stated that this is allowed, and this fixes VMWare Horizon setup not working. CORE-13434

svn path=/trunk/; revision=75730